# agentic-connector-builder-webapp

./: .gitignore  AGENTS.md  BUILD_ISSUE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  main.py  playwright.config.py  poe_tasks.toml  pyproject.toml  requirements.txt  rxconfig.py  test_import.py  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
agentic_connector_builder_webapp/: _guidance.py  agentic_connector_builder_webapp.py  chat_agent.py  cli.py  task_list.py
agentic_connector_builder_webapp/components/: MonacoYaml.tsx  __init__.py  chat_sidebar.py  settings_modal.py
agentic_connector_builder_webapp/models/: task_list.py
agentic_connector_builder_webapp/pages/: index.py
agentic_connector_builder_webapp/state/: __init__.py  builder_state.py  chat_agent_state.py  progress_state.py  ui_state.py
agentic_connector_builder_webapp/tabs/: __init__.py  code_tab.py  progress_tab.py  requirements_tab.py  tabs.py
assets/: airbyte.css
docs/: generate.py
docs/templates/: custom.css
src/agentic_connector_builder_webapp/: __init__.py  app.py
tests/: conftest.py  test_app.py  test_manifest_editing.py
tests/e2e/: conftest.py  test_yaml_editor.py  test_yaml_editor_schema_validation.py
