[project]
name = "agentic-connector-builder-webapp"
version = "0.1.0"
description = "A full-stack agentic connector builder webapp with YAML editing capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reflex",
    "reflex-monaco",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "playwright>=1.40.0",
]
